# grpcAPI

./: .env  .gitignore  Makefile  README.md  debug_filter.py  draft.py  logo.html  post2.md  pyproject.toml  setup.cfg  tasks.py
articles/: article_1_ctxinject.md
example/: README.md
example/guber/: app.py  auth.py  config.json  db.py  grpcapi.config.json  models.py  run.py
example/userpack/: client_bilateral.py  client_server_stream.py  client_stream.py  client_unary.py  health_check.py  list_service.py  server.py
grpcAPI/: __init__.py  _version.py  add_to_server.py  app.py  build_proto.py  cli.py  compapp.py  compile.py  compileutils.py  config.py  context.py  data_types.py  datatypes.py  exceptionhandler.py  extract_types.py  files_sentinel.py  format_service.py  funclabel.py  grpcapi.py  inject_validation.py  interface.py  interfaces.py  label_method.py  load_credential.py  logger.py  make_method.py  makeproto_pass.py  mapclass.py  mapclss.py  middleware.py  module_import.py  module_loader.py  package_module.py  proto_build.py  proto_build2.py  proto_builder.py  proto_ctxinject.py  proto_inject.py  proto_load.py  proto_model.py  (+15 more)
grpcAPI/adaptors/: grpcio_impl.py  impl.py  protobut_typing.py
grpcAPI/commands/: __init__.py  build.py  command.py  compile.py  config.toml  init.py  lint.py  list.py  protoc.py  run.py  snapshot.py  snapshot_objects.py  snapshot_proto.py  utils.py
grpcAPI/ctxinject/: constrained.py  exceptions.py  inject.py  mapfunction.py  model.py  sigcheck.py  validate.py  validate2.py
grpcAPI/grpcio_adaptor/: async_server.py  extract_types.py  get_class_metadata.py  grpcio_module.py  imodule.py  inject_validation.py  interceptor.py  make_method.py  makeproto_pass.py  process_service.py  protoc_compile.py
grpcAPI/lib/: user_pb2.py  user_pb2.pyi
grpcAPI/makeproto/: OLDtemplate_render.py  (+21 more)
tests/: conftest.py  test_add_to_server.py  test_app.py  test_app_base.py  test_app_helper.py  test_app_persistance.py  test_app_service_decorator.py  test_app_snapshot.py  test_chained.py  test_cli.py  test_cls_map.py  test_compile.py  test_context_mock.py  test_custom_serice_proc.py  test_ensure_dirs.py  test_extract_func_info.py  test_file_sentinel.py  test_format_service.py  test_grpcio_impl.py  test_inject_aux_func.py  test_load_proto.py  test_make_method.py  test_make_proto.py  test_makes.py  test_makes_extra.py  test_mapclass.py  test_module_package.py  test_package_map.py  test_proto_inject.py  test_protobuf_typing.py  test_protobuild.py  test_proxy.py  test_register_descriptor.py  test_render.py  test_schema.py  test_service_provider.py  test_singleton.py  test_testclient.py  test_validate_signature.py  testingo.py  (+1 more)
(+426 files in other folders)
