[project]
name = "grpcapi"
version = "0.1.0"
description = ""
authors = [
    { name = "rodbell" }
]
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "jinja2>=3.1.6",
    "typing-extensions>=4.13.2",
    "rich>=14.0.0",
    "deepdiff>=8.5.0",
    "grpcio>=1.71.0",
    "grpcio-tools>=1.71.0",
    "python-dateutil>=2.9.0.post0"
]

[project.optional-dependencies]
dev = [
    "black>=25.1.0",
    "isort>=6.0.1",
    "mypy>=1.15.0",
    "ruff>=0.11.10",
    "flake8>=7.2.0",
    "flake8-bugbear>=24.12.12"
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"


[project.scripts]
grpcapi = "grpc_framework.cli:main"