[project]
name = "grpcAPI"
version = "0.1.0"
description = ""
authors = [
    { name = "rodbell" }
]
requires-python = ">=3.7"

dependencies = [
    "ctxinject @ git+https://github.com/bellirodrigo2/ctxinject.git@main",
    "typemapping @ git+https://github.com/bellirodrigo2/typemapping.git@main",
    "grpcio", 
    "grpcio-tools",
    "grpcio-health-checking",
    "grpcio-reflection",
    "toml",
    "inflection",
    "pyyaml"
]

[project.optional-dependencies]
dev = [
    "mypy-protobuf",
    "black>=25.1.0",
    "isort>=6.0.1",
    "mypy>=1.15.0",
    "ruff>=0.11.10",
    "flake8>=7.2.0",
    "flake8-bugbear>=24.12.12",
    "pytest>=7.0.0",
    "pytest-asyncio",
    "pytest-cov",
    "pydantic>=2.0",
    'pydantic[email]'
]
pydantic = [
    "pydantic>=2.0",
    "pydantic[email]"
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
