[project]
name = "grpcAPI"
dynamic = ["version"]
description = ""
authors = [
    { name = "rodbell" }
]
requires-python = ">=3.7"

dependencies = [
    "ctxinject",
    "typemapping",
    "grpcio", 
    "grpcio-tools",
    "grpcio-health-checking",
    "grpcio-reflection",
    "rich",
    "click",
    "jinja2",
    "inflection",
    "pyyaml",
    "toml",
    "json5",
]

[project.scripts]
grpcapi = "grpcAPI.cli:main"

[project.optional-dependencies]
dev = [
    "mypy-protobuf",
    "black>=25.1.0",
    "isort>=6.0.1",
    "mypy>=1.15.0",
    "ruff>=0.11.10",
    "flake8>=7.2.0",
    "flake8-bugbear>=24.12.12",
    "pytest>=7.0.0",
    "pytest-asyncio",
    "pytest-cov",
]
pydantic = [
    "ctxinject[pydantic]"
]

example = [
    "sqlalchemy>=2.0.0",
]

[tool.ruff.lint]
ignore = ["E402"]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
version = {attr = "grpcAPI.__version__"}
